# twitch-chat-metrics

./: Cargo.toml  README.md
src/: chat.rs  lib.rs  main.rs
src/ui/: mod.rs
src/ui/widgets/: chat.rs  giveaway.rs  mod.rs  overview.rs  settings.rs
