[package]
edition = "2021"
name = "twitch-chat-metrics"
version = "0.1.0"

[dependencies]
color-eyre = "0.6.1"
druid = {git = "https://github.com/linebender/druid", rev = "fc05e965c85fced8720c655685e02478e0530e94"}
druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery", rev = "50b1cd1b59573159377ed3c0a25ca80e791a7574"}
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
twitch-irc = "4.0.0"
typed-builder = "0.10.0"

[profile.release]
lto = true
